<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.2"
        android:calendarViewShown="false"
    />
	<LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.2" >

        <LinearLayout
            android:id="@+id/layout_food"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextView1"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/food"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txt_food"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:lines="1"
                android:text="@string/initial_value"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_traffic"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextView2"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/traffic"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txt_traffic"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:lines="1"
                android:text="@string/initial_value"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_allowance"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextView3"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/allowance"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/holo_green_light"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txt_allowance"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:lines="1"
                android:text="@string/initial_value"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/holo_green_light"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_total"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_margin="0dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/total"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/darker_gray"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/txt_total"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:lines="1"
            android:text="@string/initial_value"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/darker_gray"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.2"
        android:background="@android:color/background_light" >

        <FrameLayout
            android:id="@+id/img_manage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <ImageView
                android:contentDescription="@string/menu"
                android:id="@+id/ImageView1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@android:drawable/ic_menu_manage" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/img_send"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <ImageView
                android:contentDescription="@string/sms"
                android:id="@+id/ImageView2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@android:drawable/sym_action_email" />

        </FrameLayout>

    </LinearLayout>
</LinearLayout>
